styles/home.css
/* Dynamic Slider */
.carousel_slider {
  width: 100%;
  height: max-content;
  max-height: 500px;
  display: flex;
  overflow: hidden;
  position: relative;
  transition: all 1s linear;
}
.carousel_slides {
  opacity: 0.5;
  flex-shrink: 0;
  width: 100%;
  height: 500px;
  display: flex;
  flex-direction: row;
  flex-wrap: nowrap;
  /* display: grid;
  grid-template-columns: repeat(2, 1fr); */
  transition: all 1s linear;
}
.carousel_slides.active {
  opacity: 1;
}
.slider_container {
  overflow: hidden;
  flex: 1;
}
.slider_container:first-child {
  display: flex;
  align-items: center;
}
.slider_img-container {
  width: 100%;
  height: 150%;
  background-color: rgb(255, 255, 255);
  border-radius: 0 50% 50% 0;
  overflow: hidden;
  border-right: 10px solid rgba(0, 0, 0, 0);
}
.slider_img-container img {
  object-fit: cover;
  width: 100%;
  object-position: center;
  object-fit: cover;
}
.slider_contents {
  flex: 1;
  padding-inline: 40px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: start;
  color: #ffffff;
}
.slider_title {
  color: rgb(255, 255, 255);
  font-size: 50px;
  font-weight: 600;
}
.slider_contents .hr_line {
  width: 60%;
  margin: 0px;
  height: 1px;
  margin-block: 0 10px;
}
.slider_contents p {
  color: #fff;
  font-family: Poppins;
  font-size: 16px;
  font-weight: 400;
}
.slider_title-label {
  margin-bottom: 24px;
}
.slider_description {
  margin-bottom: 16px;
}

/* logo slider */
.home_partner-slider {
  height: max-content;
  padding: 2rem 1rem;
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.heading_text {
  font-size: 28px;
  font-weight: 600;
  font-family: "Poppins", sans-serif;
  font-style: normal;
  line-height: 1.3em;
  color: var(--dark-color);
  text-align: center;
}

.home_partner-title {
  text-align: center;
}
.home_partner-slider .hr_line {
  width: 25%;
  margin-block: 8px;
}

.logo_slider {
  position: relative;
  width: 90%;
  margin-inline: auto;
  white-space: nowrap;
  overflow: hidden;
}
.logo_slider::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  z-index: 2;
  width: 180px;
  height: 100%;
  background: linear-gradient(to left, rgba(255, 255, 255, 0), white);
}
.logo_slider::after {
  content: "";
  position: absolute;
  top: 0;
  right: 0;
  z-index: 2;
  width: 180px;
  height: 100%;
  background: linear-gradient(to right, rgba(255, 255, 255, 0), white);
}
.logo_slider:hover .logo_slides {
  animation-play-state: paused;
}

.logo_slides {
  display: inline-block;
  animation: 10s logo-slider infinite linear;
  padding-block: 16px;
}
.slide_icons {
  width: auto;
  height: 150px;
  margin-right: 60px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

@keyframes logo-slider {
  from {
    transform: translateX(0%);
  }
  to {
    transform: translateX(-100%);
  }
}

/* Dynamic Profile Card */
.dynamic_profile-container {
  width: 90% !important;
  height: max-content;
  margin-inline: auto;
  display: flex;
  justify-content: flex-start;
  align-items: flex-start;
  gap: 30px 20px;
  padding: 2rem 0rem;
  flex-wrap: wrap;
  margin-bottom: 60px;
}

/* Countdown Timer */
.countdown_container {
  background-color: #02b0e3;
  min-height: max-content;
  height: 465px;
}
.countdown_wrapper {
  width: 100%;
  height: inherit;
  background-image: url("../assets/img/bg-countdown.png");
  background-size: cover;
  display: grid;
  place-items: center;
  /* padding: 0; */
  /* margin-top: -16px; */
}
.countdown_clock {
  width: min(90%, 682px);
  height: 235px;
  border-radius: 14px;
  background: #02b0e3;
  box-shadow: -30.53px 30.53px 14.08px 158.401px rgba(0, 138, 130, 0.1) inset,
    30.53px -30.53px 14.08px 148.545px rgba(0, 138, 130, 0.1) inset,
    0px 0px 15px 0px #fff;
  backdrop-filter: blur(10px);
  display: flex;
  justify-content: center;
  gap: 42px;
}
.countdown_cards-group {
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  place-items: center;
  column-gap: 14px;
  position: relative;
}
.days_container.countdown_cards-group {
  grid-template-columns: repeat(3, 1fr);
}
.color_red {
  color: #8f0d0b !important;
}
.countdown_cards {
  width: 70px;
  height: 112px;
  color: #ffffff;
  font-size: 67px;
  font-style: normal;
  font-weight: 400;
  line-height: normal;
  font-family: "Digital Numbers";
  flex: 1;
  border-radius: 3px;
  text-align: center;
  border: 0.3px solid #ffffff8d;
  background: linear-gradient(
    180deg,
    #ffffff85 0%,
    rgba(255, 255, 255, 0) 100%
  );
  backdrop-filter: blur(22px);
  margin-top: -40px;
  display: flex;
  justify-content: center;
  align-items: center;
}
.countdown_clock-label {
  text-transform: uppercase;
  color: #fff;
  font-family: Poppins;
  font-size: 24px;
  font-weight: 300;
  position: absolute;
  bottom: 24px;
}

/* Home Contents */
.home_text-container {
  width: 90%;
  margin-inline: auto;
  padding-block: 2rem;
  display: flex;
  flex-direction: column;
  gap: 24px;
}
.home_text-container p {
  text-align: left;
}

/* ----------------- Highlights Section ----------- */
.highlights {
  width: 90%;
  margin-inline: auto;
  padding-block: 2rem;
}
.highlights h2 {
  margin-bottom: 10px;
}
.line {
  background-color: #7cdb31;
  height: 2px;
  width: 35%;
  margin-inline: auto;
  margin-bottom: 50px;
}

.radio-list {
  display: flex;
  list-style: none;
  margin-top: 0px;
  color: var(--dark-color);
  font-size: 16px;
  font-style: normal;
  font-weight: 400;
  line-height: 1.4em;
  font-family: "Poppins", sans-serif;
  padding-bottom: 15px;
}

.radio-list:before {
  content: "";
  flex-shrink: 0;
  margin-right: 15px;
  width: 10px;
  height: 10px;
  border: 2px solid #02b0e3;
  border-radius: 50%;
  margin-top: 5px;
  animation: blinkRadio 2s infinite;
}

@keyframes blinkRadio {
  0% {
    background-color: transparent;
  }

  50% {
    background-color: #02b0e3;
  }

  100% {
    background-color: transparent;
  }
}

@media (200px <=width <=600px) {
  .carousel_slider {
    all: initial;
    width: 100%;
    height: max-content;
  }
  .carousel_slides {
    all: unset;
    display: flex;
    flex-direction: column;
    width: 100%;
    align-items: center;
    overflow: hidden;
    display: none;
  }
  .slider_container {
    all: unset;
    width: 150%;
  }
  .carousel_slides.active {
    display: flex;
  }
  .slider_img-container {
    all: unset;
    width: 150%;
    height: 240px;
    border-radius: 0 0 50% 50%;
    border-bottom: 10px solid rgba(0, 0, 0, 0);
    /* border-bottom: 10px solid #009897; */
    display: flex;
    justify-content: center;
    overflow: hidden;
  }
  .slider_contents {
    all: unset;
    padding: 2rem 1rem;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    text-align: center;
    font-family: "Poppins", sans-serif;
  }
  .slider_title {
    font-size: 26px;
  }
  .countdown_container {
    height: 250px;
  }
  .countdown_clock {
    gap: 12px;
    height: 160px;
  }
  .countdown_cards-group {
    column-gap: 5px;
  }
  .countdown_cards {
    width: 38px;
    height: 80px;
    color: #ffffff;
    font-size: 36px;
    font-style: normal;
    font-weight: 400;
    line-height: normal;
    font-family: "Digital Numbers";
    flex: 1;
    border-radius: 3px;
    text-align: center;
    border: 0.3px solid #ffffff8d;
    background: linear-gradient(
      180deg,
      #ffffff85 0%,
      rgba(255, 255, 255, 0) 100%
    );
    backdrop-filter: blur(22px);
    margin-top: -30px;
    display: flex;
    justify-content: center;
    align-items: center;
  }
  .countdown_clock-label {
    font-size: 16px;
  }
}

